--- a/config.example.yml
+++ b/config.example.yml
@@ -1,5 +1,5 @@
 token: YOUR_TOKEN_HERE
-databasePath: dictionary.sqlite
+databasePath: dictionary.json
 autoSavePeriod: 200
 behavior:
   speaking: true
