--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rimraf": "^2.6.2",
     "underscore": "^1.8.3",
     "winston": "^3.1.0",
+    "write-file-atomic": "^2.3.0",
     "ws": "^6.1.0"
   },
   "devDependencies": {
